parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> main
Rule 1     main -> PROGRAM ID SEMICOL decglobal decfunc MAIN block EXIT
Rule 2     main -> PROGRAM ID SEMICOL decfunc MAIN block EXIT
Rule 3     main -> PROGRAM ID SEMICOL decglobal MAIN block EXIT
Rule 4     main -> PROGRAM ID SEMICOL MAIN block EXIT
Rule 5     decglobal -> decarr decglobal
Rule 6     decglobal -> decvar decglobal
Rule 7     decglobal -> decarr
Rule 8     decglobal -> decvar
Rule 9     decfunc -> assvar decfunc
Rule 10    decfunc -> assarr decfunc
Rule 11    decfunc -> function decfunc
Rule 12    decfunc -> assvar
Rule 13    decfunc -> assarr
Rule 14    decfunc -> function
Rule 15    function -> FUNCTION ID type OPAR type ID CPAR block
Rule 16    function -> FUNCTION ID type OPAR type ID COMA functionhelp
Rule 17    functionhelp -> type ID COMA functionhelp
Rule 18    functionhelp -> type ID CPAR block
Rule 19    return -> RETURN association SEMICOL
Rule 20    block -> OBRAK estatuto CBRAK
Rule 21    block -> OBRAK estatuto block
Rule 22    block -> estatuto block
Rule 23    block -> estatuto CBRAK
Rule 24    estatuto -> assvar
Rule 25    estatuto -> assarr
Rule 26    estatuto -> decvar
Rule 27    estatuto -> decarr
Rule 28    estatuto -> condition
Rule 29    estatuto -> writing
Rule 30    estatuto -> cycle
Rule 31    estatuto -> return
Rule 32    assvar -> ID EQUAL asshelp
Rule 33    assarr -> ID OBRAC arrdim EQUAL asshelp
Rule 34    asshelp -> association SEMICOL
Rule 35    asshelp -> CCHAR SEMICOL
Rule 36    asshelp -> CSTRING SEMICOL
Rule 37    condition -> IF OPAR association CPAR block else
Rule 38    else -> ELSE block
Rule 39    else -> <empty>
Rule 40    decvar -> VAR type ID SEMICOL
Rule 41    type -> INT
Rule 42    type -> FLOAT
Rule 43    type -> CHAR
Rule 44    type -> STRING
Rule 45    type -> BOOL
Rule 46    writing -> PRINT OPAR exp CPAR SEMICOL
Rule 47    writing -> PRINT OPAR CSTRING CPAR SEMICOL
Rule 48    writing -> PRINT OPAR CCHAR CPAR SEMICOL
Rule 49    cycle -> WHILE OPAR association CPAR block
Rule 50    cycle -> DO block WHILE OPAR association CPAR SEMICOL
Rule 51    exp -> term PLUS exp
Rule 52    exp -> term MINUS exp
Rule 53    exp -> term
Rule 54    term -> term TIMES factor
Rule 55    term -> factor DIVIDE factor
Rule 56    term -> factor
Rule 57    factor -> OPAR exp CPAR
Rule 58    factor -> varcte
Rule 59    varcte -> ID OBRAC arrdim
Rule 60    varcte -> ID
Rule 61    varcte -> CINT
Rule 62    varcte -> CFLOAT
Rule 63    arrdim -> exp CBRAC OBRAC arrdim
Rule 64    arrdim -> exp CBRAC
Rule 65    decarr -> ARR type ID OBRAC arrdim SEMICOL
Rule 66    association -> exp MTHAN exp
Rule 67    association -> exp LTHAN exp
Rule 68    association -> exp MTHANE exp
Rule 69    association -> exp LTHANE exp
Rule 70    association -> exp NOTEQUAL exp
Rule 71    association -> exp EQUALTO exp
Rule 72    association -> exp

Terminals, with rules where they appear

ARR                  : 65
BOOL                 : 45
CBRAC                : 63 64
CBRAK                : 20 23
CCHAR                : 35 48
CFLOAT               : 62
CHAR                 : 43
CINT                 : 61
COMA                 : 16 17
CPAR                 : 15 18 37 46 47 48 49 50 57
CSTRING              : 36 47
DIVIDE               : 55
DO                   : 50
ELSE                 : 38
EQUAL                : 32 33
EQUALTO              : 71
EXIT                 : 1 2 3 4
FLOAT                : 42
FUNCTION             : 15 16
ID                   : 1 2 3 4 15 15 16 16 17 18 32 33 40 59 60 65
IF                   : 37
INT                  : 41
LTHAN                : 67
LTHANE               : 69
MAIN                 : 1 2 3 4
MINUS                : 52
MTHAN                : 66
MTHANE               : 68
NOTEQUAL             : 70
OBRAC                : 33 59 63 65
OBRAK                : 20 21
OPAR                 : 15 16 37 46 47 48 49 50 57
PLUS                 : 51
PRINT                : 46 47 48
PROGRAM              : 1 2 3 4
RETURN               : 19
SEMICOL              : 1 2 3 4 19 34 35 36 40 46 47 48 50 65
STRING               : 44
TIMES                : 54
VAR                  : 40
WHILE                : 49 50
error                : 

Nonterminals, with rules where they appear

arrdim               : 33 59 63 65
assarr               : 10 13 25
asshelp              : 32 33
association          : 19 34 37 49 50
assvar               : 9 12 24
block                : 1 2 3 4 15 18 21 22 37 38 49 50
condition            : 28
cycle                : 30
decarr               : 5 7 27
decfunc              : 1 2 9 10 11
decglobal            : 1 3 5 6
decvar               : 6 8 26
else                 : 37
estatuto             : 20 21 22 23
exp                  : 46 51 52 57 63 64 66 66 67 67 68 68 69 69 70 70 71 71 72
factor               : 54 55 55 56
function             : 11 14
functionhelp         : 16 17
main                 : 0
return               : 31
term                 : 51 52 53 54
type                 : 15 15 16 16 17 18 40 65
varcte               : 58
writing              : 29

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . PROGRAM ID SEMICOL decglobal decfunc MAIN block EXIT
    (2) main -> . PROGRAM ID SEMICOL decfunc MAIN block EXIT
    (3) main -> . PROGRAM ID SEMICOL decglobal MAIN block EXIT
    (4) main -> . PROGRAM ID SEMICOL MAIN block EXIT

    PROGRAM         shift and go to state 1

    main                           shift and go to state 2

state 1

    (1) main -> PROGRAM . ID SEMICOL decglobal decfunc MAIN block EXIT
    (2) main -> PROGRAM . ID SEMICOL decfunc MAIN block EXIT
    (3) main -> PROGRAM . ID SEMICOL decglobal MAIN block EXIT
    (4) main -> PROGRAM . ID SEMICOL MAIN block EXIT

    ID              shift and go to state 3


state 2

    (0) S' -> main .



state 3

    (1) main -> PROGRAM ID . SEMICOL decglobal decfunc MAIN block EXIT
    (2) main -> PROGRAM ID . SEMICOL decfunc MAIN block EXIT
    (3) main -> PROGRAM ID . SEMICOL decglobal MAIN block EXIT
    (4) main -> PROGRAM ID . SEMICOL MAIN block EXIT

    SEMICOL         shift and go to state 4


state 4

    (1) main -> PROGRAM ID SEMICOL . decglobal decfunc MAIN block EXIT
    (2) main -> PROGRAM ID SEMICOL . decfunc MAIN block EXIT
    (3) main -> PROGRAM ID SEMICOL . decglobal MAIN block EXIT
    (4) main -> PROGRAM ID SEMICOL . MAIN block EXIT
    (5) decglobal -> . decarr decglobal
    (6) decglobal -> . decvar decglobal
    (7) decglobal -> . decarr
    (8) decglobal -> . decvar
    (9) decfunc -> . assvar decfunc
    (10) decfunc -> . assarr decfunc
    (11) decfunc -> . function decfunc
    (12) decfunc -> . assvar
    (13) decfunc -> . assarr
    (14) decfunc -> . function
    (65) decarr -> . ARR type ID OBRAC arrdim SEMICOL
    (40) decvar -> . VAR type ID SEMICOL
    (32) assvar -> . ID EQUAL asshelp
    (33) assarr -> . ID OBRAC arrdim EQUAL asshelp
    (15) function -> . FUNCTION ID type OPAR type ID CPAR block
    (16) function -> . FUNCTION ID type OPAR type ID COMA functionhelp

    MAIN            shift and go to state 16
    ARR             shift and go to state 15
    VAR             shift and go to state 10
    ID              shift and go to state 13
    FUNCTION        shift and go to state 5

    assvar                         shift and go to state 14
    function                       shift and go to state 9
    decvar                         shift and go to state 6
    assarr                         shift and go to state 7
    decarr                         shift and go to state 11
    decglobal                      shift and go to state 12
    decfunc                        shift and go to state 8

state 5

    (15) function -> FUNCTION . ID type OPAR type ID CPAR block
    (16) function -> FUNCTION . ID type OPAR type ID COMA functionhelp

    ID              shift and go to state 17


state 6

    (6) decglobal -> decvar . decglobal
    (8) decglobal -> decvar .
    (5) decglobal -> . decarr decglobal
    (6) decglobal -> . decvar decglobal
    (7) decglobal -> . decarr
    (8) decglobal -> . decvar
    (65) decarr -> . ARR type ID OBRAC arrdim SEMICOL
    (40) decvar -> . VAR type ID SEMICOL

    MAIN            reduce using rule 8 (decglobal -> decvar .)
    ID              reduce using rule 8 (decglobal -> decvar .)
    FUNCTION        reduce using rule 8 (decglobal -> decvar .)
    ARR             shift and go to state 15
    VAR             shift and go to state 10

    decglobal                      shift and go to state 18
    decvar                         shift and go to state 6
    decarr                         shift and go to state 11

state 7

    (10) decfunc -> assarr . decfunc
    (13) decfunc -> assarr .
    (9) decfunc -> . assvar decfunc
    (10) decfunc -> . assarr decfunc
    (11) decfunc -> . function decfunc
    (12) decfunc -> . assvar
    (13) decfunc -> . assarr
    (14) decfunc -> . function
    (32) assvar -> . ID EQUAL asshelp
    (33) assarr -> . ID OBRAC arrdim EQUAL asshelp
    (15) function -> . FUNCTION ID type OPAR type ID CPAR block
    (16) function -> . FUNCTION ID type OPAR type ID COMA functionhelp

    MAIN            reduce using rule 13 (decfunc -> assarr .)
    ID              shift and go to state 13
    FUNCTION        shift and go to state 5

    assvar                         shift and go to state 14
    function                       shift and go to state 9
    assarr                         shift and go to state 7
    decfunc                        shift and go to state 19

state 8

    (2) main -> PROGRAM ID SEMICOL decfunc . MAIN block EXIT

    MAIN            shift and go to state 20


state 9

    (11) decfunc -> function . decfunc
    (14) decfunc -> function .
    (9) decfunc -> . assvar decfunc
    (10) decfunc -> . assarr decfunc
    (11) decfunc -> . function decfunc
    (12) decfunc -> . assvar
    (13) decfunc -> . assarr
    (14) decfunc -> . function
    (32) assvar -> . ID EQUAL asshelp
    (33) assarr -> . ID OBRAC arrdim EQUAL asshelp
    (15) function -> . FUNCTION ID type OPAR type ID CPAR block
    (16) function -> . FUNCTION ID type OPAR type ID COMA functionhelp

    MAIN            reduce using rule 14 (decfunc -> function .)
    ID              shift and go to state 13
    FUNCTION        shift and go to state 5

    function                       shift and go to state 9
    assvar                         shift and go to state 14
    assarr                         shift and go to state 7
    decfunc                        shift and go to state 21

state 10

    (40) decvar -> VAR . type ID SEMICOL
    (41) type -> . INT
    (42) type -> . FLOAT
    (43) type -> . CHAR
    (44) type -> . STRING
    (45) type -> . BOOL

    INT             shift and go to state 24
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 25
    STRING          shift and go to state 23
    BOOL            shift and go to state 26

    type                           shift and go to state 27

state 11

    (5) decglobal -> decarr . decglobal
    (7) decglobal -> decarr .
    (5) decglobal -> . decarr decglobal
    (6) decglobal -> . decvar decglobal
    (7) decglobal -> . decarr
    (8) decglobal -> . decvar
    (65) decarr -> . ARR type ID OBRAC arrdim SEMICOL
    (40) decvar -> . VAR type ID SEMICOL

    MAIN            reduce using rule 7 (decglobal -> decarr .)
    ID              reduce using rule 7 (decglobal -> decarr .)
    FUNCTION        reduce using rule 7 (decglobal -> decarr .)
    ARR             shift and go to state 15
    VAR             shift and go to state 10

    decglobal                      shift and go to state 28
    decvar                         shift and go to state 6
    decarr                         shift and go to state 11

state 12

    (1) main -> PROGRAM ID SEMICOL decglobal . decfunc MAIN block EXIT
    (3) main -> PROGRAM ID SEMICOL decglobal . MAIN block EXIT
    (9) decfunc -> . assvar decfunc
    (10) decfunc -> . assarr decfunc
    (11) decfunc -> . function decfunc
    (12) decfunc -> . assvar
    (13) decfunc -> . assarr
    (14) decfunc -> . function
    (32) assvar -> . ID EQUAL asshelp
    (33) assarr -> . ID OBRAC arrdim EQUAL asshelp
    (15) function -> . FUNCTION ID type OPAR type ID CPAR block
    (16) function -> . FUNCTION ID type OPAR type ID COMA functionhelp

    MAIN            shift and go to state 29
    ID              shift and go to state 13
    FUNCTION        shift and go to state 5

    assvar                         shift and go to state 14
    function                       shift and go to state 9
    assarr                         shift and go to state 7
    decfunc                        shift and go to state 30

state 13

    (32) assvar -> ID . EQUAL asshelp
    (33) assarr -> ID . OBRAC arrdim EQUAL asshelp

    EQUAL           shift and go to state 32
    OBRAC           shift and go to state 31


state 14

    (9) decfunc -> assvar . decfunc
    (12) decfunc -> assvar .
    (9) decfunc -> . assvar decfunc
    (10) decfunc -> . assarr decfunc
    (11) decfunc -> . function decfunc
    (12) decfunc -> . assvar
    (13) decfunc -> . assarr
    (14) decfunc -> . function
    (32) assvar -> . ID EQUAL asshelp
    (33) assarr -> . ID OBRAC arrdim EQUAL asshelp
    (15) function -> . FUNCTION ID type OPAR type ID CPAR block
    (16) function -> . FUNCTION ID type OPAR type ID COMA functionhelp

    MAIN            reduce using rule 12 (decfunc -> assvar .)
    ID              shift and go to state 13
    FUNCTION        shift and go to state 5

    assvar                         shift and go to state 14
    function                       shift and go to state 9
    assarr                         shift and go to state 7
    decfunc                        shift and go to state 33

state 15

    (65) decarr -> ARR . type ID OBRAC arrdim SEMICOL
    (41) type -> . INT
    (42) type -> . FLOAT
    (43) type -> . CHAR
    (44) type -> . STRING
    (45) type -> . BOOL

    INT             shift and go to state 24
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 25
    STRING          shift and go to state 23
    BOOL            shift and go to state 26

    type                           shift and go to state 34

state 16

    (4) main -> PROGRAM ID SEMICOL MAIN . block EXIT
    (20) block -> . OBRAK estatuto CBRAK
    (21) block -> . OBRAK estatuto block
    (22) block -> . estatuto block
    (23) block -> . estatuto CBRAK
    (24) estatuto -> . assvar
    (25) estatuto -> . assarr
    (26) estatuto -> . decvar
    (27) estatuto -> . decarr
    (28) estatuto -> . condition
    (29) estatuto -> . writing
    (30) estatuto -> . cycle
    (31) estatuto -> . return
    (32) assvar -> . ID EQUAL asshelp
    (33) assarr -> . ID OBRAC arrdim EQUAL asshelp
    (40) decvar -> . VAR type ID SEMICOL
    (65) decarr -> . ARR type ID OBRAC arrdim SEMICOL
    (37) condition -> . IF OPAR association CPAR block else
    (46) writing -> . PRINT OPAR exp CPAR SEMICOL
    (47) writing -> . PRINT OPAR CSTRING CPAR SEMICOL
    (48) writing -> . PRINT OPAR CCHAR CPAR SEMICOL
    (49) cycle -> . WHILE OPAR association CPAR block
    (50) cycle -> . DO block WHILE OPAR association CPAR SEMICOL
    (19) return -> . RETURN association SEMICOL

    OBRAK           shift and go to state 39
    ID              shift and go to state 13
    VAR             shift and go to state 10
    ARR             shift and go to state 15
    IF              shift and go to state 43
    PRINT           shift and go to state 38
    WHILE           shift and go to state 49
    DO              shift and go to state 35
    RETURN          shift and go to state 36

    assvar                         shift and go to state 48
    return                         shift and go to state 44
    decvar                         shift and go to state 37
    assarr                         shift and go to state 40
    estatuto                       shift and go to state 41
    decarr                         shift and go to state 45
    condition                      shift and go to state 46
    writing                        shift and go to state 42
    block                          shift and go to state 50
    cycle                          shift and go to state 47

state 17

    (15) function -> FUNCTION ID . type OPAR type ID CPAR block
    (16) function -> FUNCTION ID . type OPAR type ID COMA functionhelp
    (41) type -> . INT
    (42) type -> . FLOAT
    (43) type -> . CHAR
    (44) type -> . STRING
    (45) type -> . BOOL

    INT             shift and go to state 24
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 25
    STRING          shift and go to state 23
    BOOL            shift and go to state 26

    type                           shift and go to state 51

state 18

    (6) decglobal -> decvar decglobal .

    MAIN            reduce using rule 6 (decglobal -> decvar decglobal .)
    ID              reduce using rule 6 (decglobal -> decvar decglobal .)
    FUNCTION        reduce using rule 6 (decglobal -> decvar decglobal .)


state 19

    (10) decfunc -> assarr decfunc .

    MAIN            reduce using rule 10 (decfunc -> assarr decfunc .)


state 20

    (2) main -> PROGRAM ID SEMICOL decfunc MAIN . block EXIT
    (20) block -> . OBRAK estatuto CBRAK
    (21) block -> . OBRAK estatuto block
    (22) block -> . estatuto block
    (23) block -> . estatuto CBRAK
    (24) estatuto -> . assvar
    (25) estatuto -> . assarr
    (26) estatuto -> . decvar
    (27) estatuto -> . decarr
    (28) estatuto -> . condition
    (29) estatuto -> . writing
    (30) estatuto -> . cycle
    (31) estatuto -> . return
    (32) assvar -> . ID EQUAL asshelp
    (33) assarr -> . ID OBRAC arrdim EQUAL asshelp
    (40) decvar -> . VAR type ID SEMICOL
    (65) decarr -> . ARR type ID OBRAC arrdim SEMICOL
    (37) condition -> . IF OPAR association CPAR block else
    (46) writing -> . PRINT OPAR exp CPAR SEMICOL
    (47) writing -> . PRINT OPAR CSTRING CPAR SEMICOL
    (48) writing -> . PRINT OPAR CCHAR CPAR SEMICOL
    (49) cycle -> . WHILE OPAR association CPAR block
    (50) cycle -> . DO block WHILE OPAR association CPAR SEMICOL
    (19) return -> . RETURN association SEMICOL

    OBRAK           shift and go to state 39
    ID              shift and go to state 13
    VAR             shift and go to state 10
    ARR             shift and go to state 15
    IF              shift and go to state 43
    PRINT           shift and go to state 38
    WHILE           shift and go to state 49
    DO              shift and go to state 35
    RETURN          shift and go to state 36

    assvar                         shift and go to state 48
    return                         shift and go to state 44
    decvar                         shift and go to state 37
    assarr                         shift and go to state 40
    estatuto                       shift and go to state 41
    decarr                         shift and go to state 45
    condition                      shift and go to state 46
    writing                        shift and go to state 42
    block                          shift and go to state 52
    cycle                          shift and go to state 47

state 21

    (11) decfunc -> function decfunc .

    MAIN            reduce using rule 11 (decfunc -> function decfunc .)


state 22

    (42) type -> FLOAT .

    ID              reduce using rule 42 (type -> FLOAT .)
    OPAR            reduce using rule 42 (type -> FLOAT .)


state 23

    (44) type -> STRING .

    ID              reduce using rule 44 (type -> STRING .)
    OPAR            reduce using rule 44 (type -> STRING .)


state 24

    (41) type -> INT .

    ID              reduce using rule 41 (type -> INT .)
    OPAR            reduce using rule 41 (type -> INT .)


state 25

    (43) type -> CHAR .

    ID              reduce using rule 43 (type -> CHAR .)
    OPAR            reduce using rule 43 (type -> CHAR .)


state 26

    (45) type -> BOOL .

    ID              reduce using rule 45 (type -> BOOL .)
    OPAR            reduce using rule 45 (type -> BOOL .)


state 27

    (40) decvar -> VAR type . ID SEMICOL

    ID              shift and go to state 53


state 28

    (5) decglobal -> decarr decglobal .

    MAIN            reduce using rule 5 (decglobal -> decarr decglobal .)
    ID              reduce using rule 5 (decglobal -> decarr decglobal .)
    FUNCTION        reduce using rule 5 (decglobal -> decarr decglobal .)


state 29

    (3) main -> PROGRAM ID SEMICOL decglobal MAIN . block EXIT
    (20) block -> . OBRAK estatuto CBRAK
    (21) block -> . OBRAK estatuto block
    (22) block -> . estatuto block
    (23) block -> . estatuto CBRAK
    (24) estatuto -> . assvar
    (25) estatuto -> . assarr
    (26) estatuto -> . decvar
    (27) estatuto -> . decarr
    (28) estatuto -> . condition
    (29) estatuto -> . writing
    (30) estatuto -> . cycle
    (31) estatuto -> . return
    (32) assvar -> . ID EQUAL asshelp
    (33) assarr -> . ID OBRAC arrdim EQUAL asshelp
    (40) decvar -> . VAR type ID SEMICOL
    (65) decarr -> . ARR type ID OBRAC arrdim SEMICOL
    (37) condition -> . IF OPAR association CPAR block else
    (46) writing -> . PRINT OPAR exp CPAR SEMICOL
    (47) writing -> . PRINT OPAR CSTRING CPAR SEMICOL
    (48) writing -> . PRINT OPAR CCHAR CPAR SEMICOL
    (49) cycle -> . WHILE OPAR association CPAR block
    (50) cycle -> . DO block WHILE OPAR association CPAR SEMICOL
    (19) return -> . RETURN association SEMICOL

    OBRAK           shift and go to state 39
    ID              shift and go to state 13
    VAR             shift and go to state 10
    ARR             shift and go to state 15
    IF              shift and go to state 43
    PRINT           shift and go to state 38
    WHILE           shift and go to state 49
    DO              shift and go to state 35
    RETURN          shift and go to state 36

    assvar                         shift and go to state 48
    return                         shift and go to state 44
    decvar                         shift and go to state 37
    assarr                         shift and go to state 40
    estatuto                       shift and go to state 41
    decarr                         shift and go to state 45
    condition                      shift and go to state 46
    writing                        shift and go to state 42
    block                          shift and go to state 54
    cycle                          shift and go to state 47

state 30

    (1) main -> PROGRAM ID SEMICOL decglobal decfunc . MAIN block EXIT

    MAIN            shift and go to state 55


state 31

    (33) assarr -> ID OBRAC . arrdim EQUAL asshelp
    (63) arrdim -> . exp CBRAC OBRAC arrdim
    (64) arrdim -> . exp CBRAC
    (51) exp -> . term PLUS exp
    (52) exp -> . term MINUS exp
    (53) exp -> . term
    (54) term -> . term TIMES factor
    (55) term -> . factor DIVIDE factor
    (56) term -> . factor
    (57) factor -> . OPAR exp CPAR
    (58) factor -> . varcte
    (59) varcte -> . ID OBRAC arrdim
    (60) varcte -> . ID
    (61) varcte -> . CINT
    (62) varcte -> . CFLOAT

    OPAR            shift and go to state 60
    ID              shift and go to state 62
    CINT            shift and go to state 61
    CFLOAT          shift and go to state 63

    term                           shift and go to state 57
    varcte                         shift and go to state 56
    exp                            shift and go to state 58
    factor                         shift and go to state 59
    arrdim                         shift and go to state 64

state 32

    (32) assvar -> ID EQUAL . asshelp
    (34) asshelp -> . association SEMICOL
    (35) asshelp -> . CCHAR SEMICOL
    (36) asshelp -> . CSTRING SEMICOL
    (66) association -> . exp MTHAN exp
    (67) association -> . exp LTHAN exp
    (68) association -> . exp MTHANE exp
    (69) association -> . exp LTHANE exp
    (70) association -> . exp NOTEQUAL exp
    (71) association -> . exp EQUALTO exp
    (72) association -> . exp
    (51) exp -> . term PLUS exp
    (52) exp -> . term MINUS exp
    (53) exp -> . term
    (54) term -> . term TIMES factor
    (55) term -> . factor DIVIDE factor
    (56) term -> . factor
    (57) factor -> . OPAR exp CPAR
    (58) factor -> . varcte
    (59) varcte -> . ID OBRAC arrdim
    (60) varcte -> . ID
    (61) varcte -> . CINT
    (62) varcte -> . CFLOAT

    CCHAR           shift and go to state 66
    CSTRING         shift and go to state 67
    OPAR            shift and go to state 60
    ID              shift and go to state 62
    CINT            shift and go to state 61
    CFLOAT          shift and go to state 63

    term                           shift and go to state 57
    varcte                         shift and go to state 56
    asshelp                        shift and go to state 65
    exp                            shift and go to state 69
    factor                         shift and go to state 59
    association                    shift and go to state 68

state 33

    (9) decfunc -> assvar decfunc .

    MAIN            reduce using rule 9 (decfunc -> assvar decfunc .)


state 34

    (65) decarr -> ARR type . ID OBRAC arrdim SEMICOL

    ID              shift and go to state 70


state 35

    (50) cycle -> DO . block WHILE OPAR association CPAR SEMICOL
    (20) block -> . OBRAK estatuto CBRAK
    (21) block -> . OBRAK estatuto block
    (22) block -> . estatuto block
    (23) block -> . estatuto CBRAK
    (24) estatuto -> . assvar
    (25) estatuto -> . assarr
    (26) estatuto -> . decvar
    (27) estatuto -> . decarr
    (28) estatuto -> . condition
    (29) estatuto -> . writing
    (30) estatuto -> . cycle
    (31) estatuto -> . return
    (32) assvar -> . ID EQUAL asshelp
    (33) assarr -> . ID OBRAC arrdim EQUAL asshelp
    (40) decvar -> . VAR type ID SEMICOL
    (65) decarr -> . ARR type ID OBRAC arrdim SEMICOL
    (37) condition -> . IF OPAR association CPAR block else
    (46) writing -> . PRINT OPAR exp CPAR SEMICOL
    (47) writing -> . PRINT OPAR CSTRING CPAR SEMICOL
    (48) writing -> . PRINT OPAR CCHAR CPAR SEMICOL
    (49) cycle -> . WHILE OPAR association CPAR block
    (50) cycle -> . DO block WHILE OPAR association CPAR SEMICOL
    (19) return -> . RETURN association SEMICOL

    OBRAK           shift and go to state 39
    ID              shift and go to state 13
    VAR             shift and go to state 10
    ARR             shift and go to state 15
    IF              shift and go to state 43
    PRINT           shift and go to state 38
    WHILE           shift and go to state 49
    DO              shift and go to state 35
    RETURN          shift and go to state 36

    assvar                         shift and go to state 48
    return                         shift and go to state 44
    decvar                         shift and go to state 37
    assarr                         shift and go to state 40
    estatuto                       shift and go to state 41
    condition                      shift and go to state 46
    decarr                         shift and go to state 45
    block                          shift and go to state 71
    writing                        shift and go to state 42
    cycle                          shift and go to state 47

state 36

    (19) return -> RETURN . association SEMICOL
    (66) association -> . exp MTHAN exp
    (67) association -> . exp LTHAN exp
    (68) association -> . exp MTHANE exp
    (69) association -> . exp LTHANE exp
    (70) association -> . exp NOTEQUAL exp
    (71) association -> . exp EQUALTO exp
    (72) association -> . exp
    (51) exp -> . term PLUS exp
    (52) exp -> . term MINUS exp
    (53) exp -> . term
    (54) term -> . term TIMES factor
    (55) term -> . factor DIVIDE factor
    (56) term -> . factor
    (57) factor -> . OPAR exp CPAR
    (58) factor -> . varcte
    (59) varcte -> . ID OBRAC arrdim
    (60) varcte -> . ID
    (61) varcte -> . CINT
    (62) varcte -> . CFLOAT

    OPAR            shift and go to state 60
    ID              shift and go to state 62
    CINT            shift and go to state 61
    CFLOAT          shift and go to state 63

    term                           shift and go to state 57
    varcte                         shift and go to state 56
    exp                            shift and go to state 69
    factor                         shift and go to state 59
    association                    shift and go to state 72

state 37

    (26) estatuto -> decvar .

    CBRAK           reduce using rule 26 (estatuto -> decvar .)
    OBRAK           reduce using rule 26 (estatuto -> decvar .)
    ID              reduce using rule 26 (estatuto -> decvar .)
    VAR             reduce using rule 26 (estatuto -> decvar .)
    ARR             reduce using rule 26 (estatuto -> decvar .)
    IF              reduce using rule 26 (estatuto -> decvar .)
    PRINT           reduce using rule 26 (estatuto -> decvar .)
    WHILE           reduce using rule 26 (estatuto -> decvar .)
    DO              reduce using rule 26 (estatuto -> decvar .)
    RETURN          reduce using rule 26 (estatuto -> decvar .)


state 38

    (46) writing -> PRINT . OPAR exp CPAR SEMICOL
    (47) writing -> PRINT . OPAR CSTRING CPAR SEMICOL
    (48) writing -> PRINT . OPAR CCHAR CPAR SEMICOL

    OPAR            shift and go to state 73


state 39

    (20) block -> OBRAK . estatuto CBRAK
    (21) block -> OBRAK . estatuto block
    (24) estatuto -> . assvar
    (25) estatuto -> . assarr
    (26) estatuto -> . decvar
    (27) estatuto -> . decarr
    (28) estatuto -> . condition
    (29) estatuto -> . writing
    (30) estatuto -> . cycle
    (31) estatuto -> . return
    (32) assvar -> . ID EQUAL asshelp
    (33) assarr -> . ID OBRAC arrdim EQUAL asshelp
    (40) decvar -> . VAR type ID SEMICOL
    (65) decarr -> . ARR type ID OBRAC arrdim SEMICOL
    (37) condition -> . IF OPAR association CPAR block else
    (46) writing -> . PRINT OPAR exp CPAR SEMICOL
    (47) writing -> . PRINT OPAR CSTRING CPAR SEMICOL
    (48) writing -> . PRINT OPAR CCHAR CPAR SEMICOL
    (49) cycle -> . WHILE OPAR association CPAR block
    (50) cycle -> . DO block WHILE OPAR association CPAR SEMICOL
    (19) return -> . RETURN association SEMICOL

    ID              shift and go to state 13
    VAR             shift and go to state 10
    ARR             shift and go to state 15
    IF              shift and go to state 43
    PRINT           shift and go to state 38
    WHILE           shift and go to state 49
    DO              shift and go to state 35
    RETURN          shift and go to state 36

    assvar                         shift and go to state 48
    return                         shift and go to state 44
    decvar                         shift and go to state 37
    assarr                         shift and go to state 40
    estatuto                       shift and go to state 74
    decarr                         shift and go to state 45
    condition                      shift and go to state 46
    writing                        shift and go to state 42
    cycle                          shift and go to state 47

state 40

    (25) estatuto -> assarr .
